--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "a2s"
+description = "Rust implementation of Source A2S query"
 version = "0.1.0"
 license = "MIT"
 repository = "https://github.com/rumblefrog/a2s-rs"
