--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "a2s"
 description = "Rust implementation of Source A2S query"
-version = "0.1.1"
+version = "0.2.0"
 license = "MIT"
 repository = "https://github.com/rumblefrog/a2s-rs"
-authors = ["rumblefrog <contact@zhenyangli.me>"]
+authors = ["rumblefrog <contact@rumblefrog.me>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -13,3 +13,13 @@ edition = "2018"
 byteorder = "1.3.2"
 bzip2 = "0.3.3"
 crc = "^1.0.0"
+thiserror = "1.0"
+
+[dependencies.serde]
+version = "1.0"
+features = ["derive"]
+optional = true
+
+[features]
+default = []
+serialization = ["serde"]
