--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1.0.0", features = ["full"], optional = true }
 byteorder = "1.3.2"
 bzip2 = "0.3.3"
 crc = "^1.0.0"
@@ -23,3 +24,4 @@ optional = true
 [features]
 default = []
 serialization = ["serde"]
+async = ["tokio"]
